--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -4,6 +4,7 @@
 
 TESTS += test/test_roulettecoin
 bin_PROGRAMS += test/test_roulettecoin
+noinst_PROGRAMS += test/test_roulettecoin_fuzzy
 TEST_SRCDIR = test
 TEST_BINARY=test/test_roulettecoin$(EXEEXT)
 
@@ -114,7 +115,7 @@ endif
 #
 
 # test_roulettecoin_fuzzy binary #
-test_test_roulettecoin_fuzzy_SOURCES = test/test_roulettecoin_roulettecoin.cpp
+test_test_roulettecoin_fuzzy_SOURCES = test/test_roulettecoin_fuzzy.cpp
 test_test_roulettecoin_fuzzy_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES)
 test_test_roulettecoin_fuzzy_CXXFLAGS = $(AM_CXXFLAGS) $(PIE_FLAGS)
 test_test_roulettecoin_fuzzy_LDFLAGS = $(RELDFLAGS) $(AM_LDFLAGS) $(LIBTOOL_APP_LDFLAGS)
