--- a/contrib/debian/bitcoin-qt.desktop
+++ b/contrib/debian/bitcoin-qt.desktop
@@ -1,14 +1,14 @@
 [Desktop Entry]
 Version=1.0
-Name=Bitcoin Core
-Comment=Connect to the Bitcoin P2P Network
-Comment[de]=Verbinde mit dem Bitcoin peer-to-peer Netzwerk
-Comment[fr]=Bitcoin, monnaie virtuelle cryptographique pair à pair
-Comment[tr]=Bitcoin, eşten eşe kriptografik sanal para birimi
-Exec=bitcoin-qt %u
+Name=Roulettecoin Core
+Comment=Connect to the Roulettecoin P2P Network
+Comment[de]=Verbinde mit dem Roulettecoin peer-to-peer Netzwerk
+Comment[fr]=Roulettecoin, monnaie virtuelle cryptographique pair à pair
+Comment[tr]=Roulettecoin, eşten eşe kriptografik sanal para birimi
+Exec=roulettecoin-qt %u
 Terminal=false
 Type=Application
 Icon=bitcoin128
 MimeType=x-scheme-handler/bitcoin;
 Categories=Office;Finance;
-StartupWMClass=Bitcoin-qt
+StartupWMClass=Roulettecoin-qt
